--- a/notebooks/NeuralNetwork.ipynb
+++ b/notebooks/NeuralNetwork.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,12 +304,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a hyperparameter search space\n",
+    "space = {\n",
+    "    'n_hidden_layers': hp.choice('n_hidden_layers', [1, 2, 3]),\n",
+    "    'n_units': hp.choice('n_units', [64, 128, 256]),\n",
+    "    'learning_rate': hp.loguniform('learning_rate', -5, -2),\n",
+    "    'dropout_rate': hp.uniform('dropout_rate', 0.0, 0.5),\n",
+    "    'epochs': hp.quniform('epochs', 50, 200, 10),\n",
+    "    'batch_size': hp.choice('batch_size', [32, 64, 128])\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the objective function for hyperparameter tuning\n",
+    "def objective(params):\n",
+    "    model = keras.Sequential()\n",
+    "    model.add(keras.layers.Input(shape=(X_train.shape[1],)))\n",
+    "    \n",
+    "    for _ in range(params['n_hidden_layers']):\n",
+    "        model.add(keras.layers.Dense(params['n_units'], activation='relu'))\n",
+    "        model.add(keras.layers.Dropout(params['dropout_rate']))\n",
+    "    \n",
+    "    model.add(keras.layers.Dense(1))  # Output layer for regression\n",
+    "    \n",
+    "    model.compile(optimizer=keras.optimizers.Adam(learning_rate=params['learning_rate']),\n",
+    "                  loss='mean_squared_error')\n",
+    "    \n",
+    "    model.fit(X_train, y_train, epochs=int(params['epochs']), batch_size=params['batch_size'], verbose=0)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "    return rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform hyperparameter tuning using Hyperopt\n",
+    "best = fmin(fn=objective, space=space, algo=tpe.suggest, max_evals=100)"
    ]
   }
  ],
