--- a/notebooks/NN.ipynb
+++ b/notebooks/NN.ipynb
@@ -11,14 +11,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2023-10-29 13:51:21.057816: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-            "2023-10-29 13:51:21.088977: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "2023-10-29 13:51:21.089016: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-            "2023-10-29 13:51:21.089049: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "2023-10-29 13:51:21.095258: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-            "2023-10-29 13:51:21.096148: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "2023-10-29 14:03:34.277720: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+            "2023-10-29 14:03:34.308962: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "2023-10-29 14:03:34.308994: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "2023-10-29 14:03:34.309029: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2023-10-29 14:03:34.315759: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+            "2023-10-29 14:03:34.316642: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
             "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "2023-10-29 13:51:22.101366: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+            "2023-10-29 14:03:35.212517: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
           ]
         }
       ],
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -213,7 +213,7 @@
               "[701 rows x 7 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -224,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "XEW8yONUDLXr"
       },
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "id": "h8wf1dOyDZXt"
       },
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "id": "L350sFv3DdI8"
       },
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "id": "KXmLWyqJDf7L"
       },
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {
         "id": "Aer8Ikg8Dkb0"
       },
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "id": "lPg_63wnDmkr"
       },
@@ -1067,6 +1067,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load the trained model\n",
+        "loaded_model = keras.models.load_model('gemstone_price_prediction_model3.h5')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 16,
       "metadata": {
         "colab": {
@@ -1126,26 +1136,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'model' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m/workspaces/Price-prediction-Neural-network/notebooks/NN.ipynb Cell 15\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bpsychic-winner-rqv4v46pgjhxgg4/workspaces/Price-prediction-Neural-network/notebooks/NN.ipynb#X21sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Predictions and RMSE Calculation\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Bpsychic-winner-rqv4v46pgjhxgg4/workspaces/Price-prediction-Neural-network/notebooks/NN.ipynb#X21sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m y_pred \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpredict(X_test)\u001b[39m.\u001b[39mflatten()\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bpsychic-winner-rqv4v46pgjhxgg4/workspaces/Price-prediction-Neural-network/notebooks/NN.ipynb#X21sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m rmse \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msqrt(mean_squared_error(y_test, y_pred))\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bpsychic-winner-rqv4v46pgjhxgg4/workspaces/Price-prediction-Neural-network/notebooks/NN.ipynb#X21sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mRoot Mean Squared Error (RMSE): \u001b[39m\u001b[39m{\u001b[39;00mrmse\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1/1 [==============================] - 0s 33ms/step\n",
+            "Predicted Gemstone Price: $47507.38\n"
           ]
         }
       ],
       "source": [
-        "# Predictions and RMSE Calculation\n",
-        "y_pred = final_model.predict(X_test).flatten()\n",
-        "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
-        "print(f\"Root Mean Squared Error (RMSE): {rmse}\")"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+        "from tensorflow import keras\n",
+        "\n",
+        "# Load the trained model\n",
+        "loaded_model = keras.models.load_model('gemstone_price_prediction_model3.h5')\n",
+        "\n",
+        "# Collect user input\n",
+        "gemstone_name = input(\"Enter the gemstone name: \")\n",
+        "cut = input(\"Enter the cut: \")\n",
+        "color = input(\"Enter the color: \")\n",
+        "clarity = input(\"Enter the clarity: \")\n",
+        "weight = float(input(\"Enter the weight: \"))\n",
+        "\n",
+        "# Create a DataFrame with the user input\n",
+        "user_input = pd.DataFrame({\n",
+        "    'gemstone_name': [gemstone_name],\n",
+        "    'cut': [cut],\n",
+        "    'color': [color],\n",
+        "    'clarity': [clarity],\n",
+        "    'weight': [weight]\n",
+        "})\n",
+        "\n",
+        "# Perform data preprocessing on the user input (similar to the training data)\n",
+        "categorical_columns = ['gemstone_name', 'cut', 'color', 'clarity']\n",
+        "for column in categorical_columns:\n",
+        "    user_input[column] = LabelEncoder().fit_transform(user_input[column])\n",
+        "\n",
+        "numerical_columns = ['weight']\n",
+        "scaler = StandardScaler()\n",
+        "user_input[numerical_columns] = scaler.fit_transform(user_input[numerical_columns])\n",
+        "\n",
+        "# Convert the input array to a float32 array\n",
+        "user_input = user_input.astype('float32')\n",
+        "\n",
+        "# Make predictions using the loaded model\n",
+        "predicted_prices = loaded_model.predict(user_input.values)\n",
+        "\n",
+        "# Display the predicted price\n",
+        "predicted_price = predicted_prices[0][0]\n",
+        "print(f'Predicted Gemstone Price: ${predicted_price:.2f}')\n"
       ]
     }
   ],
